Finaliza projeto mini navegador web